@@ -393,7 +393,8 @@ class Time
       d = Date._strptime(date, format)
       raise ArgumentError, "invalid strptime format - `#{format}'" unless d
       if seconds = d[:seconds]
-        Time.at(seconds)
+        offset = d[:offset] || 0
+        Time.at(seconds).localtime(offset)
       else
         year = d[:year]
         year = yield(year) if year && block_given?
